--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -1,684 +1,43 @@
-.half-carousel-wrapper .half-carousel {
-  position: relative;
-  top: 6rem;
-}
-
-.half-carousel .brand-tile {
-  background: #ffffff !important;
-}
-
-.half-carousel {
-  .brand-tile {
-    .box {
-      width: 40%;
-      padding: 2rem;
-
-      @include sm {
-        padding: 0 2rem;
-      }
+.carousel{
+  img{
+    width: 100%;
+  }
+  &.carousel-with-img-arrow-links{
+    .image{
+      @extend .bottom-right-arrow;
     }
   }
-}
-
-.half-carousel .brand-tile .image {
-  width: 60%;
-}
-
-.half-carousel .carousel-slides .carousel-slide .carouselSlide {
-  background: transparent;
-  height: auto;
-  width: 65%;
-  margin-left: -30%;
-  box-shadow: 0px 20px 56px -10px rgba(0, 0, 0, 0.15);
-}
-.half-carousel .lSSlideOuter {
-  overflow: visible;
-}
-
-.half-carousel .lSSlideWrapper {
-  overflow: visible;
-}
-
-.half-carousel.leader-card-adjust {
-  top: 2.5rem;
-
-  @include sm {
-    top: 0;
-    margin-left: 0.5rem !important;
-    margin-right: 0.5rem !important;
-  }
-
-  .lSAction {
-    @include sm {
-      position: absolute;
-      right: -10px;
-      top: -110px;
+  &.carousel-top-arrow-nav{
+    .lSSlide {
+      margin-top: 3rem;
     }
-  }
-
-  .brand-tile {
-    .box {
-      @include sm {
-        width: 100%;
-        min-height: 425px;
-        position: relative;
-      }
-    }
-
-    .image {
-      @include sm {
-        width: 100%;
-      }
-    }
-  }
-
-  .carouselSlide:hover {
-    .carousel-content {
-      h3 {
-        a {
-          &:before {
-            content: '';
-            background: transparent;
-            width: 100%;
-            height: 100vw;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 11;
+    .lSAction{
+      a{
+        background-image: none;
+        width: 60px;
+        height: 60px;
+        text-align: center;
+        line-height: 60px;
+        background-color: $color-white;
+        border-radius: 30px;
+        &:after {
+          font-family: 'icomoon';
+        }
+        &.lSPrev {
+          &:after {
+            content: '\e906';
+          }
+        }
+        &.lSPrev {
+          &:after {
+            content: '\e907';
           }
         }
       }
-
-      .imageCompatibleMarkup:after {
-        filter: grayscale(100) contrast(10) invert(1);
-      }
     }
   }
-
-  .carouselSlide:focus-within {
-    .carousel-content {
-      .imageCompatibleMarkup:after {
-        outline: 2px solid #000 !important;
-      }
-    }
-  }
-}
-.carousel {
-  .carousel-slide {
-    @include sm {
-      padding: 0px 15px 0 0px;
-      margin-top: 160px;
-    }
-    &.active {
-      .carouselSlide {
-        margin-left: 0;
-      }
-    }
-  }
-  img {
-    width: 100%;
-  }
-  .lSAction {
-    a {
-      background-image: none;
-      width: 60px;
-      height: 60px;
-      text-align: center;
-      line-height: 60px;
-      background-color: $color-white;
-      border-radius: 30px;
-      &:after {
-        font-family: 'icomoon';
-      }
-      &.lSPrev {
-        &:after {
-          content: '\e906';
-        }
-      }
-      &.lSPrev {
-        &:after {
-          content: '\e907';
-        }
-      }
-    }
-  }
-  .lSSlide {
-    margin-top: 3rem;
-  }
-}
-
-.carousel-right-img {
-  position: absolute;
-  right: 0;
-  top: 0;
-
-  @include sm {
+  .youtube-player > img {
     position: relative;
   }
 }
 
-.collage-top-carousel .carousel .box {
-  height: 900px;
-
-  @include sm {
-    height: auto;
-  }
-}
-
-.checkout-section .collage-bottom-carousel .carousel .lSPager.lSpg {
-  margin-top: 0px;
-  position: absolute;
-  bottom: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.checkout-section .lSSlideOuter .lSPager.lSpg {
-  > li {
-    a {
-      height: 20px !important;
-      width: 4px !important;
-      background-color: $color-1;
-      border-radius: 0;
-    }
-  }
-
-  > li.active {
-    a {
-      height: 32px !important;
-      width: 8px !important;
-      background-color: var(--color-black);
-    }
-  }
-}
-
-.collage-bottom-carousel {
-  .carousel {
-    .box.component {
-      .richText {
-        @include sm {
-          order: 2;
-        }
-
-        p {
-          @include sd {
-            margin-bottom: 3rem;
-          }
-        }
-      }
-
-      .box.component {
-        @include sm {
-          order: 1;
-        }
-      }
-    }
-  }
-}
-.reference-whats-new {
-  .carousel-content .box .paragraphSystem .richText.default-style {
-    background: $color-2;
-  }
-
-  .carousel-cq .lSSlideOuter .lSSlideWrapper .carousel-slides .carousel-slide {
-    margin-top: 4rem;
-  }
-
-  .carousel-slide:hover {
-    h4 {
-      a {
-        &:before {
-          content: '';
-          background: transparent;
-          width: 100vw;
-          height: 100vw;
-          position: absolute;
-          top: 0;
-          left: 0;
-        }
-      }
-    }
-
-    .imageCompatibleMarkup {
-      &::after {
-        filter: grayscale(100) contrast(10) invert(1);
-      }
-    }
-  }
-
-  .carousel-slide:focus-within {
-    .imageCompatibleMarkup {
-      &::after {
-        outline: 2px solid $color-black !important;
-      }
-    }
-  }
-}
-
-.reference-our-brand-bottom-carousel {
-  .carouselSlide:hover {
-    h4 {
-      a {
-        &:before {
-          content: '';
-          background: transparent;
-          width: 100vw;
-          height: 100vw;
-          position: absolute;
-          top: 0;
-          left: 0;
-        }
-      }
-    }
-
-    .imageCompatibleMarkup:after {
-      filter: grayscale(100) contrast(10) invert(1);
-    }
-  }
-
-  .carouselSlide:focus-within {
-    .imageCompatibleMarkup:after {
-      outline: 2px solid #000 !important;
-    }
-  }
-
-  a[style*='visibility:hidden'] {
-    padding: 0;
-    font-size: 0;
-    line-height: 0;
-  }
-
-  .imageCompatibleMarkup {
-    img {
-      width: 100%;
-    }
-  }
-}
-
-.page-care-for-humanity {
-  .carousel {
-    .carousel-content:hover {
-      .image:after {
-        filter: grayscale(100) contrast(10) invert(1);
-      }
-
-      .richText.default-style {
-        h4 {
-          a {
-            &:before {
-              content: '';
-              background: transparent;
-              width: 100vw;
-              height: 100vh;
-              position: absolute;
-              top: 0;
-              left: 0;
-            }
-          }
-        }
-      }
-    }
-  }
-}
-.reference-homepage-carousel {
-  .carousel-slide:hover {
-    .image.section {
-      &::after {
-        filter: grayscale(100) contrast(10) invert(1);
-      }
-    }
-
-    .richText.component {
-      h4 {
-        a {
-          &::before {
-            content: '';
-            background: transparent;
-            width: 100%;
-            height: 100vh;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 1;
-          }
-        }
-      }
-    }
-  }
-}
-
-.reference-leadership-carousel-two {
-  .carousel-cq {
-    .lSSlideOuter {
-      .lSSlideWrapper {
-        .lSAction {
-          a.lSPrev {
-            width: 3.5rem;
-            height: 3.5rem;
-            right: 72px;
-          }
-
-          a.lSNext {
-            width: 3.5rem;
-            height: 3.5rem;
-          }
-
-          a {
-            top: 4rem !important;
-
-            @media only screen and (max-width: 480px) {
-              top: 2.5rem !important;
-            }
-          }
-        }
-      }
-    }
-  }
-}
-
-.reference-our-brand-top-carousel {
-  .carousel {
-    .lSAction a {
-      top: -3rem;
-
-      @include sd {
-        top: 0;
-      }
-
-      @include sm {
-        top: 3rem;
-      }
-    }
-
-    .lSPager.lSpg {
-      display: flex !important;
-      justify-content: flex-end;
-
-      @include sd {
-        justify-content: center !important;
-        bottom: -10rem !important;
-      }
-
-      @include sm {
-        bottom: -14rem !important;
-      }
-
-      li.active {
-        a {
-          height: 32px !important;
-          width: 8px !important;
-          background-color: #000 !important;
-        }
-      }
-
-      li {
-        margin-top: auto;
-        margin-bottom: auto;
-        padding: 0 0.5rem;
-
-        a {
-          background-color: #484848 !important;
-          height: 20px !important;
-          width: 4px !important;
-          border-radius: 0px !important;
-        }
-      }
-    }
-  }
-}
-@media (min-width: 768px) {
-  .reference-our-brand-top-carousel {
-    .pager-on-bottom-center {
-      .lSPager {
-        bottom: -7.5rem !important;
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .half-carousel.leader-card-adjust .brand-tile .box {
-    min-height: 350px;
-    margin-top: -2.5rem;
-  }
-}
-@media screen and (max-width: 320px) {
-  .half-carousel.leader-card-adjust .brand-tile .box {
-    padding: 0 10px;
-  }
-}
-
-@media screen and (max-width: 280px) {
-  .half-carousel.leader-card-adjust .brand-tile .box {
-    min-height: 400px;
-  }
-}
-
-@media screen and (max-width: 240px) {
-  .half-carousel.leader-card-adjust .brand-tile .box {
-    min-height: 460px;
-    margin-top: 0;
-  }
-}
-
-.carouselSlide .reference-card-block .youtube-player > img {
-  position: relative;
-}
-
-.half-carousel-wrapper {
-  overflow: hidden;
-  padding-bottom: 15rem;
-}
-@media screen and (max-width: 320px) {
-  .reference-leadership-carousel-two {
-    .leader-card-adjust h2 {
-      width: 68%;
-    }
-  }
-}
-
-.carousel-slides {
-  height: auto !important;
-  .carousel-slide {
-    padding: 100px 15px 0 0px;
-    .carouselSlide {
-      height: 100%;
-      background: #fff;
-      @media (max-width: $breakpoint-sd-max) {
-        width: auto;
-        margin-left: 0;
-      }
-      [class*='-profile-banner'] {
-        position: relative;
-        .media-container {
-          position: relative;
-          &:after {
-            content: '\e907';
-            font-family: 'icomoon';
-            background-color: $color-primary;
-            position: absolute;
-            background-size: 20px;
-            font-size: 20px;
-            background-repeat: no-repeat;
-            right: 0;
-            bottom: 0px;
-            top: initial;
-            left: initial;
-            height: 48px;
-            width: 48px;
-            background-position: center;
-            text-align: center;
-            line-height: 48px;
-          }
-        }
-        &:hover {
-          .media-container {
-            &:after {
-              content: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-arrow.png') !important;
-            }
-          }
-        }
-      }
-    }
-  }
-}
-.reference-leadership-carousel-two,
-.reference-board-of-directors-carousel {
-  .carousel-slide {
-    .carouselSlide {
-      background: #fff;
-      .text-color-white * {
-        color: #000 !important;
-      }
-    }
-    .bg-color-black {
-      background-color: #fff !important;
-    }
-  }
-}
-.reference-leadership-carousel-two {
-  .leader-card-adjust {
-    .carousel-content:hover {
-      .youtube-player.media-container:after {
-        filter: grayscale(100) contrast(10) invert(1);
-      }
-    }
-  }
-}
-.carousel-slide {
-  .carouselSlide {
-    background: #fff;
-  }
-}
-
-.carousel {
-  .lSSlideOuter {
-    margin-top: -5rem;
-  }
-  .lSPager.lSpg {
-    display: none;
-  }
-  .lSAction {
-    a {
-      opacity: 1;
-      top: 2rem;
-      @include sm {
-        top: 3.5rem;
-      }
-      @include sd {
-        top: 2.5rem;
-      }
-      &.lSPrev {
-        left: initial;
-        right: 75px;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: 0;
-      }
-      &.lSNext {
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: 0;
-      }
-      &:hover {
-        background-color: transparent;
-      }
-    }
-  }
-}
-.stories-around {
-  @include sm {
-    width: 50%;
-  }
-}
-
-.carousel-cq {
-  .lSSlideOuter {
-    @include sm {
-      margin-top: -7rem;
-    }
-    .lSSlideWrapper {
-      .lSAction {
-        a {
-          &.lSPrev {
-            right: 75px;
-            @include md {
-              right: 106px;
-            }
-          }
-        }
-      }
-      .carousel-slides {
-        .carousel-slide {
-          margin-top: 7rem;
-          .carouselSlide {
-            .carousel-content {
-              .box {
-                .paragraphSystem {
-                  .imageCompatibleMarkup {
-                    position: relative;
-                    &:after {
-                      content: '\e907';
-                      font-family: 'icomoon';
-                      font-size: 1rem;
-                      background-color: $color-primary;
-                      position: absolute;
-                      background-size: 20px;
-                      font-size: 20px;
-                      background-repeat: no-repeat;
-                      right: 2px;
-                      bottom: 2px;
-                      top: initial;
-                      left: initial;
-                      height: 48px;
-                      width: 48px;
-                      background-position: center;
-                      outline: 2px solid #30ea03;
-                      text-align: center;
-                      line-height: 48px;
-                    }
-                  }
-                  .richText.default-style {
-                    padding: 1rem;
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-  .lSAction > .lSNext {
-    @include sm {
-      right: 0;
-    }
-  }
-}
-
-@media screen and (max-width: 991px) {
-  .carousel .carousel-slides .carousel-slide .carouselSlide {
-    height: 100%;
-    background: #fff;
-    width: 90%;
-    margin-left: -5%;
-  }
-}
-
-/* custom carousel end */
-
-.bottom-pos-50 {
-  position: absolute;
-  bottom: 50px;
-}
-.carousel-slides .carousel-slide {
-  padding: 0px 15px 0 0px;
-  margin-top: 100px;
-}
-
-@media screen and (max-width: 320px) {
-  .half-carousel.leader-card-adjust .brand-tile .box {
-    min-height: 405px;
-  }
-}
