--- a/src/scss/brand/components/image-card/_index.scss
+++ b/src/scss/brand/components/image-card/_index.scss
@@ -19,246 +19,13 @@
       color: #ffffff !important;
     }
   }
-}
-
-.bottom-right-arrow {
-  position: relative;
-  &::after {
-    content: '\e907';
-    font-family: 'icomoon';
-    text-align: center;
-    font-size: 20px;
-    background-color: $color-primary;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 72px;
-    line-height: 72px;
-    color: $color-2;
-  }
-  &.arrow-size-small {
-    &:after {
-      width: 40px;
-      line-height: 40px;
-    }
-  }
-  &.arrow-size-medium {
-    &:after {
-      width: 48px;
-      line-height: 48px;
+  &.small-cards{
+    margin-bottom: 2rem;
+    .card-content {
+      padding: 1rem;
+      @include sd {
+        padding: 1rem 0.5rem;
+      }
     }
   }
 }
-
-// .overlapping-title {
-//   .richText.component {
-//     position: absolute;
-//     top: -10px;
-//   }
-//   &:hover {
-//     h3 {
-//       a {
-//         &:before {
-//           content: '';
-//           background: transparent;
-//           width: 100vw;
-//           height: 100vw;
-//           position: absolute;
-//           top: 0;
-//           left: 0;
-//         }
-//       }
-//     }
-//     .giant-font {
-//       a {
-//         &:before {
-//           content: '';
-//           background: transparent;
-//           width: 100vw;
-//           height: 100vw;
-//           position: absolute;
-//           top: 0;
-//           left: 0;
-//         }
-//       }
-//     }
-//     &::after {
-//       filter: grayscale(100) contrast(10) invert(1);
-//     }
-//   }
-//   &:focus-within {
-//     &::after {
-//       outline: 2px solid #000 !important;
-//     }
-//   }
-// }
-// .leadership-box {
-//   .overlapping-title {
-//     position: relative;
-
-//     .richText.text-white {
-//       left: 1rem;
-//       right: 2rem;
-//       top: 1rem;
-//     }
-
-//     @include sd {
-//       max-width: 50% !important;
-//       flex-basis: 50% !important;
-//       width: 50% !important;
-//     }
-
-//     @include sm {
-//       max-width: 100% !important;
-//       flex-basis: 100% !important;
-//       width: 100% !important;
-//     }
-
-//     &::after {
-//       content: '';
-//       background-color: $color-primary;
-//       background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-arrow-right.png');
-//       position: absolute;
-//       background-size: 20px;
-//       background-repeat: no-repeat;
-//       right: 2px;
-//       bottom: 2px;
-//       top: initial;
-//       left: initial;
-//       height: 72px;
-//       width: 72px;
-//       background-position: center;
-//       outline: 2px solid $color-primary;
-//     }
-//   }
-// }
-// .planet-people-card-sec {
-//   .overlapping-title:hover {
-//     .planet-people-secondary-section-content {
-//       h2 {
-//         a {
-//           background-color: var (--bg-color-2);
-//           color: #000 !important;
-
-//           &:before {
-//             content: '';
-//             background: transparent;
-//             width: 100vw;
-//             height: 100vw;
-//             position: absolute;
-//             top: 0;
-//             left: 0;
-//           }
-//         }
-//       }
-//     }
-//     .planet-persentation-global-card::after {
-//       filter: grayscale(100) contrast(10) invert(1);
-//     }
-//   }
-
-//   .overlapping-title:focus-within {
-//     .planet-persentation-global-card::after {
-//       outline: 2px solid #000 !important;
-//     }
-//   }
-// }
-
-// .your-patient-card-overlap {
-//   &.leadership-box {
-//     .overlapping-title {
-//       .switchable-image {
-//         position: relative;
-
-//         &::after {
-//           content: '';
-//           background-image: linear-gradient(to right, #0000004f, transparent);
-//           position: absolute;
-//           top: 0;
-//           height: 100%;
-//           width: 100%;
-//         }
-//       }
-
-//       .richText.component {
-//         p {
-//           @include sm {
-//             margin-right: 2rem !important;
-//           }
-//         }
-//       }
-
-//       .giant-font {
-//         span {
-//           color: inherit !important;
-//           font-size: inherit !important;
-//           font-weight: inherit !important;
-//         }
-//       }
-//     }
-//   }
-
-//   .overlapping-title:hover p a {
-//     &:before {
-//       content: '';
-//       background: transparent;
-//       width: 100vw;
-//       height: 100vh;
-//       position: absolute;
-//       top: 0;
-//       left: 0;
-//     }
-//   }
-// }
-
-// .your-patient-card-overlap.leadership-box .overlapping-title .giant-font span {
-//   display: block;
-//   width: fit-content;
-//   color: #ffffff !important;
-// }
-
-// .your-patient-card-overlap.leadership-box
-//   .overlapping-title:hover
-//   .giant-font
-//   span,
-// .your-patient-card-overlap.leadership-box
-//   .overlapping-title:focus-within
-//   .giant-font
-//   span,
-// .your-patient-card-overlap.leadership-box
-//   .overlapping-title
-//   .giant-font:focus
-//   span {
-//   background-color: inherit !important;
-// }
-
-// @media screen and (max-width: 320px) {
-//   .your-patient-card-overlap.leadership-box
-//     .overlapping-title
-//     .giant-font
-//     span {
-//     width: 50%;
-//   }
-//   .leadership-box .overlapping-title .richText.text-white {
-//     top: 0rem;
-//   }
-// }
-
-// .find-out-more .leadership-box {
-//   .overlapping-title {
-//     p {
-//       font-size: 2.25rem;
-//       font-weight: 500;
-//       line-height: 125%;
-//     }
-//     @media (max-width: 512px) {
-//       .richText.text-white {
-//         left: 0rem;
-//         top: 0rem;
-//       }
-//       p {
-//         font-size: 2rem;
-//       }
-//     }
-//   }
-// }
