--- a/src/scss/brand/components/_components.scss
+++ b/src/scss/brand/components/_components.scss
@@ -1,27 +1,32 @@
 //components
-@import 'rich-text/index';
+@import 'accessibility/index';
 @import 'accordion/index';
-@import 'arrow-down/index';
+@import 'arrow-links/index';
+@import 'bottom-boxes/index';
+@import 'card-text-image/index';
+@import 'career-search/index';
 @import 'carousel/index';
 @import 'footer/index';
 @import 'fonts/index';
 @import 'filter/index';
 @import 'forms/index';
 @import 'green-bg-title/index';
+@import 'headings/index';
 @import 'hero-banner/index';
+@import 'icons/index';
 @import 'mega-menu/index';
-@import 'overlap-content/index';
-@import 'overlap-title/index';
+@import 'positioned-banner-wrapper/index';
 @import 'page-components/index';
 @import 'profile/index';
 @import 'quote/index';
+@import 'rich-text/index';
 @import 'sitemap/index';
 @import 'slick-slider/index';
 @import 'story-blocks/index';
-@import 'table/index';
-@import 'tabs/index';
-@import 'video/index';
-@import 'accessibility/index';
-@import 'icons/index';
 @import 'space-utility/index';
 @import 'search-results/index';
+@import 'section-with-bg/index';
+@import 'table/index';
+@import 'tabs/index';
+@import 'tag-links/index';
+@import 'video/index';
