--- a/src/scss/brand/components/positioned-banner-wrapper/_index.scss
+++ b/src/scss/brand/components/positioned-banner-wrapper/_index.scss
@@ -1,5 +1,6 @@
 .positioned-banner-wrapper {
-  .banner-text {
+  .banner-text{
+    height:auto;
     left: 50%;
     transform: translateX(-50%);
     position: relative;
@@ -16,16 +17,16 @@
       transform: translateY(-50%);
     }
   }
-  &.right-positioned {
-    .banner-text {
+  &.right-positioned{
+    .banner-text{
       @include sm {
         right: 0;
         left: auto;
       }
     }
   }
-  &.left-positioned {
-    .banner-text {
+  &.left-positioned{
+    .banner-text{
       @include sm {
         left: 0;
         right: auto;
