--- a/src/scss/brand/components/bottom-boxes/_index.scss
+++ b/src/scss/brand/components/bottom-boxes/_index.scss
@@ -13,3 +13,19 @@
       }
     }
   }
+
+  .img-bottom-btn {
+    @include sm {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      margin-bottom: -52px !important;
+    }
+    .btn {
+      margin: 0;
+      width: 80%;
+      text-align: left;
+      justify-content: flex-start;
+      max-width: 343px;
+    }
+  }
