--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -2,43 +2,27 @@
   margin-top: 0.2rem;
   padding: 0;
   width: 100vw;
-
-  .p-m-x-1 {
-    padding-left: 1.5rem !important;
-    padding-right: 1.5rem !important;
-
-    @include sd {
-      padding-left: 1rem !important;
-      padding-right: 1rem !important;
-    }
-  }
-
   .footer-secondary-nav {
     border-top: 1px solid $color-grey-3;
     padding: 3rem 0;
-
     .footer-logo {
       display: flex;
       justify-content: center;
-
       @include sm {
         justify-content: flex-start;
       }
-
       img {
         width: 138px;
         margin-left: 0;
       }
     }
   }
-
   .image {
     a {
       border: 4px solid $color-white;
-
+      margin: 0 -12px;
       &:hover {
         height: auto;
-        background-color: #fff !important;
         border: 4px solid $color-primary;
       }
     }
@@ -48,17 +32,14 @@
     color: $color-1;
     font-size: $font-size-12;
     line-height: $line-height-150;
-
     a {
       margin-right: 3px;
       font-size: $font-size-15;
     }
-
     strong {
       color: $color-grey-2;
     }
   }
-
   h6 {
     color: $color-1;
     line-height: $line-height-150;
@@ -66,7 +47,6 @@
     margin-top: 0;
     margin-bottom: 1rem;
   }
-
   .footer-list {
     display: flex;
     justify-content: center;
