--- a/src/scss/brand/components/profile/_index.scss
+++ b/src/scss/brand/components/profile/_index.scss
@@ -7,13 +7,9 @@
     background-color: $color-grey-3;
     padding: 1rem;
     width: 100%;
-
     p {
       margin: 0;
     }
-  }
-  .bottom-right-arrow::after {
-    top: -50px;
   }
 }
 .leader-card-adjust {
@@ -24,108 +20,19 @@
     z-index: 0;
   }
 }
+.leadership-single-page {
+  .card-content-container {
+    width: 100% !important;
 
-// .leader-card-adjust {
-//   .media-container {
-//     position: relative;
-//     width: 100% !important;
-//     max-width: 100% !important;
-//     flex-basis: 100% !important;
-//   }
-//   .reference-card-block {
-//     &:hover {
-//       .media-container {
-//         &::after {
-//           filter: grayscale(100) contrast(10) invert(1);
-//         }
-//       }
-//     }
-//     &:focus {
-//       .media-container {
-//         &::after {
-//           outline: 2px solid $color-black !important;
-//         }
-//       }
-//     }
-//   }
-// }
-// .leader-card-adjust {
-//   .reference-leader-profile .youtube-player div {
-//     display: none;
-//   }
+    @include sm {
+      width: 50% !important;
+    }
+  }
+  .media-container {
+    width: 100%;
 
-//   .card-content-container {
-//     padding: 1rem;
-
-//     h3 {
-//       a {
-//         &:hover {
-//           color: $color-black !important;
-//         }
-
-//         &::before {
-//           content: '';
-//           position: absolute;
-//           top: 0px;
-//           left: 0px;
-//           width: 100%;
-//           height: 100%;
-//         }
-//       }
-//     }
-//   }
-// }
-
-// .leader-card-adjust .reference-leader-profile .youtube-player.media-container {
-//   width: 100% !important;
-//   max-width: 100% !important;
-//   flex-basis: 100% !important;
-// }
-
-// .leader-card-adjust .card-content-container {
-//   width: 100% !important;
-//   max-width: 100% !important;
-//   flex-basis: 100% !important;
-// }
-
-// .leader-card-adjust
-//   .reference-leader-profile
-//   .youtube-player.media-container:after {
-//   content: '';
-//   background-color: $color-primary;
-//   background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-arrow-right.png');
-//   position: absolute;
-//   background-size: 20px;
-//   background-repeat: no-repeat;
-//   right: 0;
-//   bottom: 0px;
-//   top: initial;
-//   left: initial;
-//   height: 48px;
-//   width: 48px;
-//   background-position: center;
-// }
-
-// .leader-card-adjust
-//   .bg-color-black:hover
-//   .reference-leader-profile
-//   .youtube-player.media-container:after {
-//   content: url(/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-arrow.png) !important;
-// }
-
-// @media screen and (max-width: 991px) {
-//   .leader-card-adjust
-//     .carousel
-//     .carousel-slides
-//     .carousel-slide
-//     .carouselSlide {
-//     height: 100%;
-//     background: $color-white;
-//     width: 90%;
-//     margin-left: -5%;
-//   }
-
-//   .leader-card-adjust .carousel-slides .carousel-slide.active .carouselSlide {
-//     margin-left: 0;
-//   }
-// }
+    @include sm {
+      flex-basis: 50% !important;
+    }
+  }
+}
