--- a/src/scss/default/theme/utility-classes/_flex-version-with-margins.scss
+++ b/src/scss/default/theme/utility-classes/_flex-version-with-margins.scss
@@ -103,7 +103,7 @@
         .content,
         .inner,
         figure {
-          height: 100%;
+          height: auto;
         }
       }
     }
