--- a/src/scss/default/theme/utility-classes/_flex.scss
+++ b/src/scss/default/theme/utility-classes/_flex.scss
@@ -109,7 +109,7 @@
         .content,
         .inner,
         figure {
-          height: 100%;
+          height: auto;
         }
       }
     }
