--- a/src/scss/default/theme/theme-configuration/_footer.scss
+++ b/src/scss/default/theme/theme-configuration/_footer.scss
@@ -3,7 +3,7 @@
 */
 
 // COLORS
-$footer-background-color: $color-7 !default;
+$footer-background-color: $color-white !default;
 $footer-text-color: $color-2 !default;
 $footer-divider-starter-color: rgba(darken($color-7, 20%), 0.2) !default;
 $footer-divider-end-color: rgba($color-7, 0) !default;
