--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -38,6 +38,7 @@
   .image {
     a {
       border: 4px solid $color-white;
+      margin: 0 -12px;
 
       &:hover {
         height: auto;
@@ -88,6 +89,7 @@
 
     li {
       padding-right: 1rem;
+      padding-left: 0 !important;
 
       @include sd {
         padding-right: 0;
