--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -296,6 +296,8 @@ header {
         font-family: 'icomoon';
         font-size: 1rem;
         background-size: auto;
+        top: 3px;
+        background-size: 80%;
       }
     }
     nav {
