--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -12,7 +12,12 @@
     background-color: $color-grey-3;
     color: $color-3;
   }
-
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  input:-webkit-autofill:active {
+      transition: background-color 5000s ease-in-out 0s;
+  }
   textarea {
     resize: none;
     width: 100%;
@@ -63,7 +68,7 @@
   }
   .privacy-desc-haleon {
     font-size: 1.125rem;
-    font-size: $font-normal;
+    font-family: $font-normal;
     padding: 1rem 2rem 0;
   }
 
